뉴스기사 및 댓글, join 쿼리 대신 mybatis resultMap 이용

--- a/back_workspace/javaee_workspace/borderapp/src/main/webapp/WEB-INF/web.xml
+++ b/back_workspace/javaee_workspace/borderapp/src/main/webapp/WEB-INF/web.xml
@@ -31,5 +31,26 @@
 </servlet-mapping>
 
 
+<servlet>
+<servlet-name>newsRegistServlet</servlet-name>
+<servlet-class>com.sinse.borderapp.news.controller.RegistServlet</servlet-class>
+</servlet>
+
+<servlet-mapping>
+<servlet-name>newsRegistServlet</servlet-name>
+<url-pattern>/news/regist</url-pattern>
+</servlet-mapping>
+
+<servlet>
+<servlet-name>commentRegistServlet</servlet-name>
+<servlet-class>com.sinse.borderapp.comment.controller.WriteServlet</servlet-class>
+</servlet>
+
+<servlet-mapping>
+<servlet-name>commentRegistServlet</servlet-name>
+<url-pattern>/comment/regist</url-pattern>
+</servlet-mapping>
+
+
   
 </web-app>
