--- a/back_workspace/javaee_workspace/mvcapp/src/main/webapp/WEB-INF/web.xml
+++ b/back_workspace/javaee_workspace/mvcapp/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,10 @@
   	<servlet>
 		<servlet-name>dispatcher</servlet-name>
 		<servlet-class>com.sinse.mvcapp.controller.DispatcherServlet</servlet-class>
+		<init-param>
+			<param-name>contextConfigLocation</param-name>
+			<param-value>/WEB-INF/servlet-mapping.data</param-value>
+		</init-param>
 	</servlet>
 	<servlet-mapping>
 		<servlet-name>dispatcher</servlet-name>
